
2001-12-06 Kevin A. Lenzo <lenzo@cs.cmu.edu>
	* TCP server fixes in sphinx2-server (server.c, srvcore.c)
	* Applied two patches from Thomas K. Harris <tkharris@cs.cmu.edu>
	  - overflow check in log.h ADD macro, topN normalization fix
	* Added win32 examples to EXTRA_DIST so they get included
	* Checks and patches from Evandro Gouvea <egouvea@cs.cmu.edu> for
	  win32 issues.
	  - maintenance fixes for cygwin and visual studio builds
	  - addition of example batch files
	  - projects for each example program
	* Fixes for Solaris from awb <awb@cs.cmu.edu>, though this
	  probably still requires some tweaking.
	* Makefile.am whitespace changes, small line continuation fix

2001-12-07 Kevin A. Lenzo <lenzo@cs.cmu.edu>
	* Changed default input gain to 80 (from 85).  80 seemed
	  'too hot' on most machines.
	* Consolidate byte order macros into byteorder.h.  Note
	  that SWAPL and SWAP_L are both present and used (as reversed 
	  senses) and this will have to be cleaned up. 
	* Add __BIG_ENDIAN__ definition in configure.in
	* Changed all unigram_t.wid to unigram_t.mapid (lm_3g)
	* Define NULL for systems that don't (sun4m).
	* Added headers, etc for sun4.  Everything now compiles
	  under sun4 except the client/server code which can
	  be commented out of the Makefile.
	* Built and sphinx2-test ran successfully on SunOS 5.5.1
	* Guarded unistd.h header includes behind ifdef conditions

2004-07-16 Ravi Mosur (rkm@cs.cmu.edu)
	* Support for FSGs added

2004-07-23 Ravi Mosur (rkm@cs.cmu.edu)
	* Some extensions to FSG code, including ability for an
	  application to pass an in-memory FSG data structure to the
	  FSG module.
	* Log files modified to have same "look and feel".

2004-12-09 Ravi Mosur (rkm@cs.cmu.edu)
	* Support for continuous density acoustic models added.

2005-01-21 Evandro Gouvea (egouvea@cs.cmu.edu)
	* Rolled back dup2 fix for log files for windows.

2005-01-26 Ravi Mosur (rkm@cs.cmu.edu)
	* Added -maxhmmpf absolute pruning parameter for FSG mode.